PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016, PHP 7.1.0beta3

- EXIF:
  . Fixed bug #72735 (Samsung picture thumb not read (zero size)). (Kalle, Remi)

- Stream: 
  . Fixed bug #72743 (Out-of-bound read in php_stream_filter_create).
    (Loianhtuan)
  . Implemented FR #27814 (Multiple small packets send for HTTP request).
    (vhuk)

04 Aug 2016, PHP 7.1.0beta2

- Core:
  . Implemented FR #72614 (Support "nmake test" on building extensions by
    phpize). (Yuji Uchiyama)
  . Fixed bug #72641 (phpize (on Windows) ignores PHP_PREFIX).
    (Yuji Uchiyama)
  . Fixed bug #72683 (getmxrr broken). (Anatol)

- Calendar:
  . Fixed bug #67976 (cal_days_month() fails for final month of the French
    calendar). (cmb)
  . Fixed bug #71894 (AddressSanitizer: global-buffer-overflow in
    zif_cal_from_jd). (cmb)

- CURL:
  . Fixed bug #71709 (curl_setopt segfault with empty CURLOPT_HTTPHEADER).
    (Pierrick)
  . Fixed bug #71929 (CURLINFO_CERTINFO data parsing error). (Pierrick)

- Intl:
  . Fixed bug #72639 (Segfault when instantiating class that extends
    IntlCalendar and adds a property). (Laruence)
  . Fixed bug #72658 (Locale::lookup() / locale_lookup() hangs if no match
    found). (Anatol)

- GD:
  . Fixed bug #72709 (imagesetstyle() causes OOB read for empty $styles). (cmb)

- mbstring:
  . Fixed bug #72691 (mb_ereg_search raises a warning if a match zero-width).
    (cmb)
  . Fixed bug #72693 (mb_ereg_search increments search position when a match
    zero-width). (cmb)
  . Fixed bug #72694 (mb_ereg_search_setpos does not accept a string's last
    position). (cmb)
  . Fixed bug #72710 (`mb_ereg` causes buffer overflow on regexp compile error).
    (ju1ius)

- Mysqlnd:
  . Fixed bug #71863 (Segfault when EXPLAIN with "Unknown column" error when
    using MariaDB). (Andrey)
  . Fixed bug #72701 (mysqli_get_host_info() wrong output). (Anatol)
