@@ -27,7 +27,8 @@ array(3) {
   [1]=>
   int(2)
   [2]=>
-  int(3)
+  array(0) {
+  }
 }
 
 Warning: mb_ereg(): empty pattern in %s on line %d
@@ -38,7 +39,8 @@ array(3) {
   [1]=>
   string(0) ""
   [2]=>
-  string(0) ""
+  array(0) {
+  }
 }
 
 Notice: Array to string conversion in %s on line %d
@@ -50,7 +52,8 @@ array(3) {
   [1]=>
   int(1)
   [2]=>
-  string(0) ""
+  array(0) {
+  }
 }
 
 Warning: mb_ereg() expects parameter 2 to be string, array given in %s on line %d
